# numpy-refactor

./: .gitignore  TAGS  TEST_COMMIT  build.sh  iron_egg.py  iron_install.py  ironsetup.py  setup.py  setupscons.py
doc/: Py3K.txt
doc/release/: 1.5.0-notes.rst  2.0.0-notes.rst
experiment/: do.sh  interface.pyx  main.py  setup.py
libndarray/: Makefile.am  Makefile.in  README.txt  autogen.sh  config.h.in  configure  configure.ac  configure.in  redo
libndarray/src/: _neighborhood_iterator_imp.h  conv_template.py  noprefix.h  npy_api.h  npy_arrayobject.c  npy_arrayobject.h  npy_arraytypes.c  npy_arraytypes.c.src  npy_buffer.c  npy_buffer.h  npy_calculation.c  npy_calculation.h  npy_common.c  npy_common.h  npy_conversion_utils.c  npy_convert.c  npy_convert_datatype.c  npy_cpu.h  npy_ctors.c  npy_datetime.c  npy_defs.h  npy_descriptor.c  npy_descriptor.h  npy_dict.c  npy_dict.h  npy_endian.h  npy_flagsobject.c  npy_fpmath.h  npy_funcs.c.src  npy_funcs.h.src  npy_getset.c  npy_ieee754.c.src  npy_index.c  npy_index.h  npy_internal.h  npy_interrupt.h  npy_item_selection.c  npy_iterators.c  npy_iterators.h  npy_loops.c.src  (+28 more)
libndarray/tools/: conv_template.py  long_double.c  mk_config.py
libndarray/windows/: build.py  msvc2008.vcproj  msvc2008.vcxproj  msvc2008.vcxproj.filters  msvc2010.sln  ndarray.def  npy_config.h
libndarray/windows/test/: build.sh  do.sh  main.c
numpy/: __init__.py  setup.py
numpy/NumpyDotNet/: CompiledBase.cs  IArray.cs  ModuleMethods.cs  NpyArray.cs  NpyBuffer.cs  NpyCoreApi.cs  NpyDefs.cs  NpyDescr.cs  NpyIndexes.cs  NpyUtils.cs  NumericOps.cs  NumpyDotNet.csproj  NumpyDotNet.opensdf  NumpyDotNet.sln  Scalar.cs  ScalarMathModule.cs  UMathModule.cs  Wrapper.cs  benchmark.py  broadcast.cs  calculation.cs  convert.cs  dtype.cs  flagsobj.cs  flatiter.cs  generate_code.bat  iron_install.py  item_selection.cs  ndarray.cs  numpy.py  shape.cs  ufunc.cs  umath.cs
numpy/NumpyDotNet/NpyAccessLib/: NpyAccessLib.vcxproj  NpyAccessLib.vcxproj.filters  Npy_Array_Access.cpp  Npy_UFunc_Access.cpp  Npy_UFunc_Acess.cpp  generate_code.bat
numpy/NumpyDotNet/Properties/: AssemblyInfo.cs
numpy/NumpyDotNet/tests/: test_dtype.py  test_multiarray.py
numpy/compat/: py3k.py
numpy/core/: SConscript  __init__.py  _internal.py  defchararray.py  fromnumeric.py  multiarray_cli.py  numeric.py  numerictypes.py  records.py  scons_support.py  setup.py  setup_common.py  setupscons.py  umath_cli.py  umath_clr.py
numpy/core/blasdot/: _dotblas.c
numpy/core/code_generators/: genapi.py  generate_numpy_api.py  generate_ufunc_api.py  generate_umath.py
numpy/core/include/numpy/: _neighborhood_iterator_imp.h  _numpyconfig.h.in  arrayobject.h  arrayscalars.h  interrupt.h  ndarrayobject.h  ndarraytypes.h  noprefix.h  npy_3kcompat.h  npy_arrayobject.h  npy_common.h  npy_cpu.h  npy_defs.h  npy_descriptor.h  npy_index.h  npy_iterators.h  npy_math.h  npy_object.h  npy_ufunc_object.h  numpy_api.h  numpyconfig.h  old_defines.h  ufuncobject.h
numpy/core/src/: _sortmodule.c.src  scalarmathmodule.c.src
numpy/core/src/libnumpy/: npy_arrayobject.c  npy_arraytypes.c.src  npy_calculation.c  npy_common.c  npy_conversion_utils.c  npy_convert.c  npy_convert_datatype.c  npy_ctors.c  npy_datetime.c  npy_descriptor.c  npy_dict.c  npy_exceptions.c  npy_flagsobject.c  npy_getset.c  npy_index.c  npy_item_selection.c  npy_iterators.c  npy_mapping.c  npy_methods.c  npy_multiarraymodule.c  npy_refcount.c  npy_shape.c  npy_usertypes.c  numpyos.c
numpy/core/src/multiarray/: arrayobject.c  arrayobject.h  arraytypes.c.src  arraytypes.h  buffer.c  buffer.h  calculation.c  calculation.h  common.c  common.h  conversion_utils.c  conversion_utils.h  convert.c  convert_datatype.c  convert_datatype.h  ctors.c  ctors.h  datetime.c  descriptor.c  descriptor.h  flagsobject.c  getset.c  hashdescr.c  hashdescr.h  item_selection.c  iterators.c  iterators.h  mapping.c  mapping.h  methods.c  methods.h  multiarray_tests.c.src  multiarraymodule.c  number.c  number.h  numpymemoryview.c  refcount.c  refcount.h  scalarapi.c  scalartypes.c.src  (+7 more)
numpy/core/src/npymath/: ieee754.c.src  npy_math_common.h  npy_math_private.h
numpy/core/src/private/: npy_3kcompat.h  npy_fpmath.h  numpy_3kcompat.h  numpy_config.h  numpy_fpmath.h
numpy/core/src/umath/: funcs.inc.src  loops.c.src  loops.h  loops.h.src  ufunc_object.c  ufunc_object.h  umath_tests.c.src  umathmodule.c.src
numpy/core/tests/: test_datetime.py  test_dtype.py  test_loops.py  test_memmap.py  test_multiarray.py  test_npy_arraytypes.py  test_numeric.py  test_numerictypes.py  test_print.py  test_records.py  test_regression.py  test_scalarmath.py  test_ufunc.py  test_umath.py
numpy/distutils/: exec_command.py  misc_util.py  system_info.py
numpy/f2py/: __init__.py  cb_rules.py  cfuncs.py  rules.py
numpy/f2py/src/: fortranobject.c  fortranobject.h
numpy/fft/: SConscript  fft.sln  fft.vcxproj  fftpack.h  fftpack_cython.cpp  fftpack_cython.pyx  fftpack_lite_clr.py  fftpack_litemodule.c  npy_ironpython.h  numpy.pxd  setup.py
numpy/lib/: SConscript  format.py  function_base.py  npyio.py  setup.py  type_check.py
numpy/lib/src/: _compiled_base.c
numpy/lib/tests/: test__datasource.py  test__iotools.py  test_arraysetops.py  test_function_base.py  test_io.py  test_polynomial.py
numpy/linalg/: SConscript  lapack_lite.cpp  lapack_lite.h  lapack_lite.pyx  lapack_lite.vcxproj  lapack_litemodule.c  linalg.py  numpy.pxd  python_xerbla.c
numpy/ma/tests/: test_core.py  test_mrecords.py
numpy/matrixlib/: __init__.py  defmatrix.py
numpy/numarray/: SConscript  _capi.c
numpy/numarray/include/numpy/: nummacro.h
numpy/polynomial/: __init__.py
numpy/random/: SConscript  __init__.py  setup.py
numpy/random/mtrand/: Python.pxi  distributions.c  distributions.h  generate_mtrand_c.py  initarray.c  initarray.h  mtrand.c  mtrand.cpp  mtrand.pyx  mtrand.pyx.net  mtrand.vcxproj  numpy.pxi  numpy.pxi.net  randomkit.c
numpy/random/tests/: test_random.py
numpy/testing/: nosetester.py
numpy/tests/: test_ctypeslib.py
tools/: np_suppressions.py  nptool  nptool.py
(+1 files in other folders)
