AUTOMAKE_OPTIONS = foreign


lib_LTLIBRARIES = libndarray.la

include_HEADERS = \
        src/npy_arrayobject.h \
        src/npy_descriptor.h \
        src/npy_object.h \
        src/npy_defs.h \
        src/npy_iterators.h \
        src/numpy_api.h

libndarray_la_SOURCES = \
        src/npy_arrayobject.c \
        src/npy_datetime.c \
        src/npy_methods.c \
        src/npy_arraytypes.c \
        src/npy_descriptor.c \
        src/npy_multiarraymodule.c \
        src/npy_calculation.c \
        src/npy_dict.c \
        src/npy_refcount.c \
        src/npy_common.c \
        src/npy_flagsobject.c \
        src/npy_shape.c \
        src/npy_conversion_utils.c \
        src/npy_getset.c \
        src/npy_usertypes.c \
        src/npy_convert.c \
        src/npy_item_selection.c \
        src/numpyos.c \
        src/npy_convert_datatype.c \
        src/npy_iterators.c \
        src/npy_ctors.c \
        src/npy_mapping.c
